import React from 'react';
import ReactDOM from 'react-dom';
import Accordion from './Accordion';
import { shallow } from 'enzyme';
import toJSON from 'enzyme-to-json';

describe(`Accordion Component`, () => {
    //add props
    const sections = [
        {
          title: 'Section 1',
          content: 'Lorem ipsum dolor sit amet consectetur adipisicing elit.',
        },
        {
          title: 'Section 2',
          content: 'Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!',
        },
        {
          title: 'Section 3',
          content: 'Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?',
        },
    ]
    it('renders an empty li when sections prop is not supplied', () => {
        const wrapper = shallow(<Accordion />)
        expect(toJSON(wrapper)).toMatchSnapshot()
    })
    it('renders no sections as active by default', () => {
        const wrapper = shallow(<Accordion sections={sections} />)
        expect(toJSON(wrapper)).toMatchSnapshot()
    })
    it('renders content from clicked section', () => {
        const wrapper = shallow(<Accordion sections={sections} />)
        wrapper.find('button').at(0).simulate('click')
        expect(toJSON(wrapper)).toMatchSnapshot()
    })
    it('renders content from one section when multiple sections clicked', () => {
        const wrapper = shallow(<Accordion sections={sections} />)
        wrapper.find('button').at(1).simulate('click')
        wrapper.find('button').at(2).simulate('click')
        expect(toJSON(wrapper)).toMatchSnapshot()
    })
})